--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">My Performances</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -88,23 +88,40 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center" >
         <div class="row" >
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-8 col-lg-offset-2" style='background-color:rgba(0,0,0,0.4)'>
                 <h2>About Me</h2>
                 <p></p>
-                <p>Kum. Soundaryalahari came under the guidance and tutelage of renowned guru Padmasri Dr. Ananda Shankar Jayant at Shankarananda Kalakshetra.For the last 11 years, Soundaryalahari has trained intensively, learning the exacting Kalakshetra style of Bharatanatyam.</p>
-                <p>Under the guidance of her Guru, Soundaryalahari has steadily grown into a strong dancer, imbibing the clear angashuddam, split second tala precision, precise footwork and nuanced abhinaya, that is a hall mark of her Guru.</p>
+				<div class="row">
+				
+				<div class="col-md-6">
+                <p class='inset'>Kum. Soundaryalahari came under the guidance and tutelage of renowned guru Padmasri Dr. Ananda Shankar Jayant at Shankarananda Kalakshetra.For the last 11 years, Soundaryalahari has trained intensively, learning the exacting Kalakshetra style of Bharatanatyam.</p>
+				</div>
+				
+				<div class="col-md-6">
+                <p class='inset'>Under the guidance of her Guru, Soundaryalahari has steadily grown into a strong dancer, imbibing the clear angashuddam, split second tala precision, precise footwork and nuanced abhinaya, that is a hall mark of her Guru.</p>
+				</div>
+				</div>
             </div>
         </div>
     </section>
 
-    <!-- Download Section -->
+    <!-- Performances Section -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                <div class="col-lg-8 col-lg-offset-2" style='background-color:rgba(0,0,0,0.4);padding:20px'>
+                    <h2>My Performances</h2>
+					<div class="col-lg-8 col-lg-offset-2">
+                    <div class="fotorama">
+					<a href="https://youtu.be/ri2SuSN9JrY">Arangetyam</a>
+					<a href="https://youtu.be/-Qhod7ukkG0">Devi Stuthi</a>
+					  <img src="img/Background/Back (1).jpg">
+					  <img src="img/Background/Back (2).jpg">
+					  <img src="img/Background/Back (3).jpg">
+					  <img src="img/Background/Back (4).jpg">
+					  <img src="img/Background/Back (5).jpg">
+					</div>
+					</div>
                 </div>
             </div>
         </div>
@@ -113,22 +130,11 @@
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+            <div class="col-lg-8 col-lg-offset-2" style='background-color:rgba(0,0,0,0.3);padding:20px'>
+                <h2>Contact Me</h2>
+                <p><a href="mailto:bsjalama@gmail.com">bsjalama@gmail.com</a>
                 </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+				<a href="https://facebook.com/soundaryalahari" class="btn btn-default btn-md" style="background-color:#000"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
             </div>
         </div>
     </section>
@@ -136,7 +142,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; Soundaryalahari.co.in 2016</p>
         </div>
     </footer>
 
@@ -145,6 +151,10 @@
 
     <!-- BackStretch Background Slider -->
     <script src="js/jquery.backstretch.min.js"></script>
+
+	<!--Fotorama-->
+	<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
