About Me text update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">My Performances</a>
+                        <a class="page-scroll" href="#download">My Gallery</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact Me</a>
@@ -94,11 +94,17 @@
 				<div class="row">
 				
 				<div class="col-md-6">
-                <p class='inset'>Kum. Soundaryalahari came under the guidance and tutelage of renowned guru Padmasri Dr. Ananda Shankar Jayant at Shankarananda Kalakshetra.For the last 11 years, Soundaryalahari has trained intensively, learning the exacting Kalakshetra style of Bharatanatyam.</p>
+                <p class='inset'>Kum. Soundaryalahari came under the guidance and tutelage of renowned guru Padmasri Dr. Ananda Shankar Jayant at Shankarananda Kalakshetra.For the last 11 years, Soundaryalahari has trained intensively, learning the exacting Kalakshetra style of Bharatanatyam.
+				<br/><br/>Under the guidance of her Guru, Soundaryalahari has steadily grown into a strong dancer, imbibing the clear angashuddam, split second tala precision, precise footwork and nuanced abhinaya, that is a hall mark of her Guru.Soundaryalahari has blossomed into a dancer of singular merit, commitment and dedication. 
+				<br/><br/>Tall and statuesque, with a lissome visage, along with a deep musical understanding, Soundaryalahari brings to her dance a quiet strength and sensitivity of portrayal, internalizing as she does the deeper meaning of her art.</p>
 				</div>
 				
 				<div class="col-md-6">
-                <p class='inset'>Under the guidance of her Guru, Soundaryalahari has steadily grown into a strong dancer, imbibing the clear angashuddam, split second tala precision, precise footwork and nuanced abhinaya, that is a hall mark of her Guru.</p>
+                <p class='inset'>
+Soundaryalahari debuted into the world of bharatnatyam by performing her arengetram in October 2011. She was selected as an artist in the “Dance Artist Panel” of Doordarshan Kendra,Hyderabad. Soundaryalahari is a faculty member of the Shankarananda Kalakshetra.
+<br/><br/>
+ She has been a part of the ensemble  of Shankarananda Kalakshetra and has had the privilege of participating in  the many  well-known productions of the institution, such as MohanaKrishna beckons, Dashavataram, and   Dancing tales Panchatantra.<br/><br/> <br/> 
+ She has performed at important festivals such as, the World Ikebana conference (2007), IIT cultural fest Sarang (2009), Indian International Forging  conference, and has performed for Kavyanjali an Ode to Gurudev Rabindranath Tagore organized by Sangeet Natak Academy and has also given many solo performances at important occasions such as the 17th international film festival at Hyderabad ,AP formation day 2011 at AP Bhavan Delhi, Nandi film award function 2012 at Hyderabad etc.</p>
 				</div>
 				</div>
             </div>
@@ -109,8 +115,8 @@
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-2" style='background-color:rgba(0,0,0,0.4);padding:20px'>
-                    <h2>My Performances</h2>
+                <div class="col-lg-8 col-lg-offset-2" style='background-color:rgba(0,0,0,0.4);padding:10px'>
+                    <span style="font-size:2.5em">My Gallery</span>
 					<div class="col-lg-8 col-lg-offset-2">
                     <div class="fotorama">
 					<a href="https://youtu.be/ri2SuSN9JrY">Arangetyam</a>
