--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Soundarya Lahari</title>
-
-    <!-- Bootstrap Core CSS -->
+   <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
@@ -55,6 +54,9 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#past">Past Performances</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#download">My Gallery</a>
                     </li>
                     <li>
@@ -71,7 +73,7 @@
     <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
-            <div class="container">
+            <div class="container title">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2" >
                         <h3 class="brand-heading">Soundarya Lahari</h3>
@@ -87,6 +89,7 @@
 
     <!-- About Section -->
     <section id="about" class="container content-section text-center" >
+	</br></br>
         <div class="row" >
             <div class="col-lg-8 col-lg-offset-2" style='background-color:rgba(0,0,0,0.4)'>
                 <h2>About Me</h2>
@@ -110,8 +113,31 @@ Soundaryalahari debuted into the world of bharatnatyam by performing her arenget
             </div>
         </div>
     </section>
+	
+	
+    <!-- Past Performances Section -->
+    <section id="past" class="container content-section text-center" >
+        <div class="row" >
+            <div class="col-lg-8 col-lg-offset-2" style='background-color:rgba(0,0,0,0.4)'>
+                <h2>Past Performances</h2>
+				
+					<div class="col-md-6">
+					</br>
+					<p class='inset'>
+					She has been a part of the ensemble  of Shankarananda Kalakshetra and has had the privilege of participating in  the many  well-known productions of the institution, such as MohanaKrishna beckons, Dashavataram, and   Dancing tales Panchatantra and has performed at important festivals.
+					</p>
+					</div>
+					<div class="col-md-6">
+					<p class='inset'>
+					Her performances include the World Ikebana conference (2007), IIT cultural fest Sarang (2009) ,Indian International Forging  conference, and has performed for Kavyanjali an Ode to Gurudev Rabindranath Tagore organized by Sangeet Natak Academy and has also given many solo performances at important occasions such as the 17th international film festival at Hyderabad ,AP formation day 2011 at AP Bhavan Delhi, Nandi film award function 2012 at Hyderabad etc.</p>
+					</div>
+				
+					<iframe  style="width:95%;height:450px ;" src="test.html" class="force-overflow scrollbar" id="style-1"></iframe>
+            </div>
+        </div>
+    </section>
 
-    <!-- Performances Section -->
+    <!-- Gallery Section -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
