--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <div class="container title">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2" >
-                        <h3 class="brand-heading" style="line-height:0px">Soundarya Lahari</h3><span style="font-size:1.4em;padding-top:0px;position:relative;left:250px;"> Bharatnatyam Dancer Extraordinare.</span>
-                        <p class="intro-text"></p>
+                        <h3 class="brand-heading">Soundarya Lahari</h3>
+                        <p class="intro-text">Bharatnatyam Dancer Extraordinare.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
