--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" >
     
 	<!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
