--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                </br><a class="navbar-brand page-scroll" href="#page-top">
+                <a class="navbar-brand page-scroll" href="#page-top">
                     <i class="fa fa-play-circle"></i>  <span class="light">Soundarya</span> Lahari
                 </a>
             </div>
@@ -76,6 +76,7 @@
             <div class="container title">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2" >
+                        <br/>
                         <h3 class="brand-heading">Soundarya Lahari</h3>
                         <p class="intro-text">Bharatnatyam Dancer Extraordinare.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
