Title alignment to top for mobile

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2" >
                         <br/>
-                        <h3 class="brand-heading">Soundarya Lahari</h3>
-                        <p class="intro-text">Bharatnatyam Dancer Extraordinare.</p>
+                        <h4 class="brand-heading" style="padding-bottom:0px;margin-top:300px;line-height:10px;margin-bottom:10px ">Soundarya Lahari</h4>
+                        <p class="intro-text" style="font-size:1em">Bharatnatyam Dancer Extraordinare.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
