--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@ Soundaryalahari debuted into the world of bharatnatyam by performing her arenget
                     <div class="fotorama">
 					<a href="https://youtu.be/ri2SuSN9JrY">Arangetyam</a>
 					<a href="https://youtu.be/-Qhod7ukkG0">Devi Stuthi</a>
-					  <img src="img/Background/Back (1).jpg">
-					  <img src="img/Background/Back (2).jpg">
-					  <img src="img/Background/Back (3).jpg">
-					  <img src="img/Background/Back (4).jpg">
-					  <img src="img/Background/Back (5).jpg">
+					  <img src="img/Background/Back (1).JPG">
+					  <img src="img/Background/Back (2).JPG">
+					  <img src="img/Background/Back (3).JPG">
+					  <img src="img/Background/Back (4).JPG">
+					  <img src="img/Background/Back (5).JPG">
 					</div>
 					</div>
                 </div>
