--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Soundaryalahari debuted into the world of bharatnatyam by performing her arenget
 	  // Duration is the amount of time in between slides,
 	  // and fade is value that determines how quickly the next image will fade in
 	  $.backstretch([
-		"img/Background/Back (4).JPG",
+		"img/Background/Back.JPG",
 		"img/Background/Back (5).JPG",
 		"img/Background/Back (7).JPG",
 		"img/Background/Back (9).JPG"
