Corrected 3-d placement of header on timeline

--- a/vertical-timeline/index.html
+++ b/vertical-timeline/index.html
@@ -13,7 +13,7 @@
 	<title>Timeline</title>
 </head>
 <body style="background-color:black">
-	<center><div id="Header" style="width:100%;height:60px;position:absolute;float:center;top:0px;background-color:#ff9933;color:black"><br/><h1>Please Scroll to view Timeline of Performances</h1></div></center>
+	<center><div id="Header" style="width:100%;height:55px;position:absolute;z-index:999;float:center;top:0px;background-color:#ff9933;color:black"><br/><h1>Please Scroll to view Timeline of Performances</h1></div></center>
 	<section id="cd-timeline" class="cd-container">
 		
 <!--Custom Timeline start/-->
