--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <br/>
                         <h2 class="brand-heading" style="padding-bottom:0px;margin-top:170px;margin-bottom:10px;font-size:4em ">Soundarya Lahari</h2>
                         <p class="intro-text" style="font-size:2em;font-family:overlock,'Sans Serif';">
-							Bharatanatyam Dancer | Teacher | Karnatic Vocalist
+							Bharatanatyam Dancer | Teacher | Carnatic Vocalist
 							<br/><br/>
 							<img style="height:60px;" src='img/Vectors/Facebook.png'/> &nbsp <img style="height:60px;" src='img/Vectors/Instagram.png'/>
 							<br/>
