Updated Youtube videos, changed back image

--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
                         <h2 class="brand-heading" style="padding-bottom:0px;margin-top:170px;margin-bottom:10px;font-size:4em ">Soundarya Lahari</h2>
                         <p class="intro-text" style="font-size:2em;font-family:overlock,'Sans Serif';">
 							Bharatanatyam Dancer | Teacher | Carnatic Vocalist
-							<br/><br/>
-							
 							<br/>
 							<a href="#about" class="btn btn-circle page-scroll">
 								<i class="fa fa-angle-double-down animated"></i>
@@ -146,8 +144,8 @@
                     <span style="font-size:2.5em">My Gallery</span>
 					<div class="col-lg-8 col-lg-offset-2">
                     <div class="fotorama">
-					<a href="https://youtu.be/ri2SuSN9JrY">Arangetyam</a>
-					<a href="https://youtu.be/-Qhod7ukkG0">Devi Stuthi</a>
+					<a href="https://youtu.be/ri2SuSN9JrY/?rel=0">Arangetyam</a>
+					<a href="https://youtu.be/-Qhod7ukkG0/?rel=0">Devi Stuthi</a>
 					  <img src="img/Background/Back (1).JPG">
 					  <img src="img/Background/Back (2).JPG">
 					  <img src="img/Background/Back (3).JPG">
@@ -222,7 +220,7 @@
 	  $.backstretch([
 		"img/Background/Back (12).JPG",
 		"img/Background/Back (11).JPG",
-		"img/Background/Back.JPG",
+		
 		"img/Background/Back (5).JPG",
 		"img/Background/Back (7).JPG",
 		"img/Background/Back (9).JPG",
