--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                     <span style="font-size:2.5em">My Gallery</span>
 					<div class="col-lg-8 col-lg-offset-2">
                     <div class="fotorama">
-					<a href="https://youtu.be/ri2SuSN9JrY/?rel=0">Arangetyam</a>
-					<a href="https://youtu.be/-Qhod7ukkG0/?rel=0">Devi Stuthi</a>
+					<a href="https://youtu.be/ri2SuSN9JrY/?rel=0&showinfo=0">Arangetyam</a>
+					<a href="https://youtu.be/-Qhod7ukkG0/?rel=0&showinfo=0">Devi Stuthi</a>
 					  <img src="img/Background/Back (1).JPG">
 					  <img src="img/Background/Back (2).JPG">
 					  <img src="img/Background/Back (3).JPG">
